--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p>Aantal Events: 0</p>
         <form action="" method="post">
             <select name="Maand" id="month">
+                <option value="Default" disabled selected>Select a month</option>
                 <option value="January">Januari</option>
                 <option value="February">Februari</option>
                 <option value="March">Maart</option>
